...
          ),
        }}
      />
      <Tabs.Screen
        name="more"
        options={{
          title: 'More',
          tabBarAccessibilityLabel: 'More tab',
          tabBarIcon: ({ color, focused }) => (
            <TabIcon name={{ ios: 'person.crop.circle', android: 'account_circle', web: 'account_circle' }} color={color as string} focused={focused} />
          ),
          headerTitle: user?.name ?? 'Account',
        }}
...
